argocd/loki/manifests/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-external
  namespace: loki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: meruto-01.pstr.space
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    traefik.ingress.kubernetes.io/router.tls.options: cert-manager-monitoring-mtls@kubernetescrd
spec:
  ingressClassName: traefik-external
  tls:
    - secretName: loki.pstr.space-dns01
      hosts:
        - loki.pstr.space
  rules:
    - host: loki.pstr.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
